@@ -1,3 +1,8 @@
+2004-05-03  Michael Snyder  <msnyder@redhat.com>
+
+	* mips-tdep.c (mips_gdbarch_init): Fix typo in comment.
+	(heuristic_proc_start): Whitespace cleanup.
+
 2004-05-04  Mark Kettenis  <kettenis@gnu.org>
 
 	* sun3-nat.c: Remove file.
